# PSZT-P_Warcaby

./: .gitignore  CMakeLists.txt  README.md  bot_tests.py
docs/: Doxyfile
include/: BotMove.hpp  Config.hpp  Controller.hpp  Game.hpp  MessageQueues.hpp  View.hpp
src/: BotMove.cpp  Config.cpp  Controller.cpp  Game.cpp  MessageQueues.cpp  View.cpp  main.cpp
tests/: Tests.cpp
